extend accession_report and resources_list_report to include collection_management_subreport

--- a/reports/resources/resources_list_report/en.yml
+++ b/reports/resources/resources_list_report/en.yml
@@ -3,3 +3,4 @@ en:
     resources_list_report:
       title: Resources List Report
       description: The Resources List Report includes basic information, dates, and extents for resource records.
+      collection_management: Collection Management
