--- a/reports/custom/en.yml
+++ b/reports/custom/en.yml
@@ -3,3 +3,11 @@ en:
     custom_report:
       title: Custom Report
       description: Create a custom report by choosing record type, fields, and linked record types.
+    collection_management_subreport:
+      processing_funding_source: Funding Source
+      processing_hours_total: Total Hours
+      processing_plan: Processing Plan
+      processing_priority: Processing Priority
+      processing_status: Processing Status
+      processors: Processors
+      rights_determined: Rights Determined?
